// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bud.bundle > should set the bundle using a string 1`] = `
{
  "automaticNameDelimiter": "/",
  "cacheGroups": {
    "react": {
      "filename": "js/bundle/react/[name].js",
      "idHint": "react",
      "priority": -10,
      "test": /\\[\\\\/\\]\\(react\\)\\[\\\\/\\]/,
    },
  },
  "chunks": "all",
  "minSize": 0,
}
`;

exports[`bud.bundle > should set the bundle using a string name and a string test 1`] = `
{
  "automaticNameDelimiter": "/",
  "cacheGroups": {
    "react": {
      "filename": "js/bundle/react/[name].js",
      "idHint": "react",
      "priority": -10,
      "test": /\\[\\\\/\\]\\(react\\)\\[\\\\/\\]/,
    },
  },
  "chunks": "all",
  "minSize": 0,
}
`;

exports[`bud.bundle > should set the bundle using a string name and array of strings test 1`] = `
{
  "automaticNameDelimiter": "/",
  "cacheGroups": {
    "react": {
      "filename": "js/bundle/react/[name].js",
      "idHint": "react",
      "priority": -10,
      "test": /\\[\\\\/\\]\\(react\\|react-dom\\)\\[\\\\/\\]/,
    },
  },
  "chunks": "all",
  "minSize": 0,
}
`;

exports[`bud.bundle > should set the bundle using a string name and regular expression test 1`] = `
{
  "automaticNameDelimiter": "/",
  "cacheGroups": {
    "react": {
      "filename": "js/bundle/react/[name].js",
      "idHint": "react",
      "priority": -10,
      "test": /react/,
    },
  },
  "chunks": "all",
  "minSize": 0,
}
`;

exports[`bud.bundle > when hashing is enabled > should include the hash in the \`filename\` property > js/bundle/react/[name].[contenthash].js 1`] = `"js/bundle/react/[name].[contenthash].js"`;
